syntax = "proto3";
package gitopia.gitopia.rewards;

import "gogoproto/gogo.proto";
import "rewards/pool.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/gitopia/gitopia/v4/x/rewards/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  
  string evaluator_address = 1 [
    (gogoproto.moretags) = "yaml:\"evaluator_address\""
  ];
  repeated RewardPool reward_series = 2 [
    (gogoproto.moretags) = "yaml:\"reward_series\""
  ];
}
